Fixed horizontal scrolling due to header

--- a/Project/css/page_style.css
+++ b/Project/css/page_style.css
@@ -12,13 +12,12 @@ a{
 body{
     background-color: #E8A87C;
     margin: 0em;
+    overflow-x: hidden;
 }
 
 .page_header{
     display: flex;
     justify-content: space-between;
-    justify-self: center;
-    margin: auto;
     top: 0;
     width: 100%;
 
@@ -27,6 +26,7 @@ body{
     padding: 0em;
     padding-left: 1em;
     padding-right: 1em;
+    margin: 0em;
     box-shadow: 0em 0.1em 0.5em rgba(0.7, 0.7, 0.7, 0.4);
     align-items: center;
 }
@@ -67,7 +67,7 @@ body{
 }
 
 .profile_dropdown img{
-    margin-right: 1em;
+    margin-right: 2em;
     margin-left: 1em;
     display: inline-flex;
     border-radius: 0.7em;
@@ -84,9 +84,10 @@ body{
     background-color: #FDFDFD;
     min-width: 6em;
     padding: 0.5em;
+    z-index: 1;
     display: none;
     top: 1.3em;
-    right: 0;
+    right: 0em;
 }
 
 .dropdown_content div {
